--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/websocket": "^10.0.1",
     "fastify": "^4.28.1",
     "fastify-cli": "^6.3.0",
     "serve": "^14.2.3"
